--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "netlify deploy --prod --dir=build",
+    "postdeploy": "echo 'Deploy Complete!'"
   },
   "eslintConfig": {
     "extends": [
