--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "homepage": "/CyberSafe/",
+ 
     "name": "cybersafe",
     "version": "0.1.0",
+    "homepage": "https://coldharbour.github.io/CyberSafe/",
     "private": true,
     "dependencies": {
       "@testing-library/jest-dom": "^5.16.5",
@@ -13,6 +14,8 @@
       "web-vitals": "^2.1.4"
     },
     "scripts": {
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build",
       "start": "react-scripts start",
       "build": "react-scripts build",
 
